--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ document.addEventListener('DOMContentLoaded', (event) => {
     let currentSlide = 1;
     const totalSlides = 20;
     let loadedImages = 0;
+    const preloadedImages = [];
     const slideImage1 = document.getElementById('slideImage1');
     const slideImage2 = document.getElementById('slideImage2');
     let activeImage = 1;
@@ -47,6 +48,7 @@ document.addEventListener('DOMContentLoaded', (event) => {
             const img = new Image();
             img.src = `assets/Slide${i}.png`;
             img.onload = imageLoaded;
+            preloadedImages[i] = img;
         }
     }
 
@@ -66,7 +68,7 @@ document.addEventListener('DOMContentLoaded', (event) => {
         const nextImage = (activeImage === 1) ? slideImage2 : slideImage1;
         const currentImage = (activeImage === 1) ? slideImage1 : slideImage2;
 
-        nextImage.src = `assets/Slide${number}.png`;
+        nextImage.src = preloadedImages[number].src; // Use preloaded image
         nextImage.style.display = 'block';
         nextImage.style.opacity = 1;
         currentImage.style.opacity = 0;
