--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 <body>
 
 <div id="preloader">Even geduld, Bezig met laden...</div>
-<div id="slideshow">
-    <img id="slideImage1" class="slide " src="assets/Slide1.png">
-    <img id="slideImage2" class="slide" style="display: none;" src="">
+<div id="slideshow" style="display: none;">
+    <img click="toggleFullScreen" id="slideImage" src="assets/Slide1.png">
 </div>
 
 <script>
-function enterFullScreen() {
-        if (!document.fullscreenElement) {
-            document.documentElement.requestFullscreen().catch(err => {
-                console.error(`Error attempting to enable full-screen mode: ${err.message} (${err.name})`);
-            });
+    function toggleFullScreen() {
+    if (!document.fullscreenElement) {
+        document.documentElement.requestFullscreen().catch(err => {
+            alert(`Error attempting to enable full-screen mode: ${err.message} (${err.name})`);
+        });
+    } else {
+        if (document.exitFullscreen) {
+            document.exitFullscreen();
         }
     }
+}
 
 document.addEventListener('fullscreenchange', onFullScreenChange);
 
@@ -31,16 +34,13 @@ function onFullScreenChange() {
             document.body.classList.remove('fullscreen-active');
         }
     }
-document.addEventListener('click', enterFullScreen);
+document.addEventListener('click', toggleFullScreen);
 
 document.addEventListener('DOMContentLoaded', (event) => {
     
     let currentSlide = 1;
     const totalSlides = 20;
     let loadedImages = 0;
-    const slideImage1 = document.getElementById('slideImage1');
-    const slideImage2 = document.getElementById('slideImage2');
-    let activeImage = 1;
 
     function preloadImages() {
         for (let i = 1; i <= totalSlides; i++) {
@@ -54,24 +54,14 @@ document.addEventListener('DOMContentLoaded', (event) => {
         loadedImages++;
         if (loadedImages === totalSlides) {
             document.getElementById('preloader').style.display = 'none';
-            const slideshow = document.getElementById('slideshow');
-            slideshow.style.display = 'block';
+            document.getElementById('slideshow').style.display = 'block';
             showSlide(currentSlide);
-            slideshow.addEventListener('click', handleUserInput);
-            slideshow.addEventListener('touchend', handleUserInput);
         }
     }
 
     function showSlide(number) {
-        const nextImage = (activeImage === 1) ? slideImage2 : slideImage1;
-        const currentImage = (activeImage === 1) ? slideImage1 : slideImage2;
-
-        nextImage.src = `assets/Slide${number}.png`;
-        nextImage.style.display = 'block';
-        nextImage.style.opacity = 1;
-        currentImage.style.opacity = 0;
-
-        activeImage = (activeImage === 1) ? 2 : 1;
+        const slideImage = document.getElementById('slideImage');
+        slideImage.src = `assets/Slide${number}.png`;
     }
 
     function nextSlide() {
@@ -88,13 +78,6 @@ document.addEventListener('DOMContentLoaded', (event) => {
         }
     }
 
-    function handleUserInput(event) {
-        event.preventDefault(); // Prevents additional events (like click after touch)
-        if (document.fullscreenElement) {   
-            nextSlide();
-        }
-    }
-    
     document.addEventListener('keydown', (event) => {
         if (event.key === 'ArrowRight' || event.key === ' ') {
             nextSlide();
@@ -135,37 +118,16 @@ body, html {
     height: 100%;
     border: 1px solid #ddd;
     position: relative;
-    animation: fadeIn 2s ease-out;
-    display: none;
 }
 
 #slideImage {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    animation-name: fadeIn;
-    animation-duration: 1s;
-    animation-fill-mode: both;
-}
-
-.slide {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: opacity 1s ease;
 }
 
 .fullscreen-active {
     cursor: none;
 }
-
-@keyframes fadeIn {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
-}
-
 </style>
 </html>
