--- a/max/index.html
+++ b/max/index.html
@@ -11,9 +11,7 @@
     <a href="../het-eiland-van-verloren-woorden/index.html"
       >Het eiland van verloren woorden</a
     >
-    <a href="../max-boekbespreking-2024/index.html">Boekbespreking 2024</a>
-    <a href="../metereorieten/index.html">Metereorieten</a>
-    <a href="../Planeet_Omar_Presentatie/index.html">Planeet Omar</a>
+    <a href="../max-boekbespreking-2024/index.html">Planeet Oma</a>
     <a href="../metereorieten/index.html">Metereorieten</a>
     <style>
       a {
